test/tests/errors/error-file-reset-wrong-arg-count.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    reset(f, bf);
}